syntax = "proto3";

package com.example;

message Empty {}

message EchoRequest {
    string ping = 1;
}

service Example {
    rpc Echo(EchoRequest) returns (EchoRequest);
    rpc GenerateError(Empty) returns (Empty);
}


